--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node server/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/server.js",
+    "test": "mocha server/**/*.test.js --timeout=5000",
+    "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
     "node": "8.11.2"
@@ -14,6 +15,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "npm": "^6.1.0"
+    "moment": "^2.22.2",
+    "npm": "^6.1.0",
+    "socket.io": "^2.1.1"
+  },
+  "devDependencies": {
+    "expect": "^23.4.0",
+    "mocha": "^5.2.0",
+    "nodemon": "^1.18.0"
   }
 }
